fix: device width gap

--- a/src/css/pf-grid.css
+++ b/src/css/pf-grid.css
@@ -1,7 +1,7 @@
 #dock{
     margin:auto;
     padding-bottom: 10px; 
-    width: 700px;
+    max-width: 700px;
 }
 
 .pf_wrap{
@@ -14,10 +14,11 @@
     animation: fadeIn 2s ease;
 }
 .pf_wrap p{
-    line-height: 1px;
+    line-height: 15px;
+    margin: 2px;
 }
 .pf_wrap hr{
-    margin: -8px;
+    margin: 1px 0 0 -8px;
 }
 .icon_delay{
     animation: fadeIn 1s ease;
@@ -69,15 +70,17 @@
     grid-row: 2/3;
     grid-column: 3/4;
     color: #eee;
-    top: -30px;
+    left: -14px;
+    top: -28px;
     width: 100px;
+    overflow: clip;
 }
 #line2{
     position: absolute;
     grid-row: 2/3;
     grid-column: 3/4;
     color: #eee;
-    left: -86px;
+    left: -95px;
     top: 25px;
     width: 80px;
     transform: rotate(135deg);
@@ -87,25 +90,25 @@
     grid-column: 3/4;
     color: #eee;
     position: absolute;
-    left: 5px;
+    left: -5px;
 }
 #line3{
     position: absolute;
     grid-row: 3/4;
     grid-column: 1/2;
     color: #eee;
-    top: -30px;
-    right: -50px;
-    width: 100px;
+    top: -33px;
+    right: -30px;
+    width: 110px;
 }
 #line4{
     position: absolute;
     grid-row: 3/4;
     grid-column: 1/2;
     color: #eee;
-    right: -102px;
-    top: -19px;
-    width: 40px;
+    right: -86px;
+    top: -42px;
+    width: 60px;
     transform: rotate(-45deg);
 }
 #interest{
@@ -113,8 +116,8 @@
     grid-row: 3/4;
     grid-column: 1/2;
     position: absolute;
-    right: -50px;
-    top: 0;
+    right: -26px;
+    top: -4px;
 }
 @keyframes fadeIn{
     0% { opacity: 0; }
