--- a/src/css/social.css
+++ b/src/css/social.css
@@ -21,6 +21,7 @@
     justify-content: center;
     align-items: center;
     padding: 0;
+    width: inherit;
 }
 #social li{
     position: relative;
